# betterme.study-new

./: .gitignore  .pre-commit-config.yaml  Caddyfile.livekit  README.md  deploy-swarm.sh  docker-compose.file-service-prod.yml  docker-compose.livekit.prod.yml  docker-compose.yml  livekit.prod.swarm.yaml  requirements.txt  run.sh  todo.txt
file_service/: Dockerfile.prod  docker-compose.yml  example.env  main.py  pyproject.toml
file_service/base/: conf.py  event_handler.py  routes.py
file_service/base/database/: r2.py  redis.py
file_service/models/: audios.py
file_service/routers/: authorization_handler.py
file_service/routers/audios/: __init__.py  utils.py
file_service/routers/audios/schemas/: audios.py
file_service/routers/images/: __init__.py  leaderboard.py
file_service/schemas/: images.py
file_service/utils/: image_handle.py  time_modules.py
file_service/utils/image_module/: __init__.py  storage.py
file_service/worker/: __init__.py  audio.py
server/: all_env.py  cloudflare-worker.py  example.env  main.py  note.txt  pyproject.toml  requirements.txt  wrangler.toml
server/.cache/: .gitignore
server/authentication/: __init__.py  discord_oauth.py  facebook_oauth.py  jwt_auth.py
server/base/: event_handler.py  exception_handle.py  routers.py  routes.py  settings.py
server/base/custom/: crud.py  http_status.py  router.py  schemas.py  types.py
server/base/database/mongodb/: __init__.py
server/database/mongodb/sync_db/: base.py
server/models/: __init__.py  audios.py  pomodoros.py  taskcategories.py  todolist.py  users.py
server/models/clock/: aichatchannels.py  audios.py  pomodoros.py  taskcategories.py  todolist.py
server/models/discord/: user_daily_study_time.py  users.py
server/models/file_service/: audios.py
server/models/news/: draft_posts.py  posts.py  secret_keys.py  shorten_links.py
server/models/pomodoro/: pomodoro_rooms.py  tasks.py  todolist.py
server/other_modules/: json_modules.py  time_modules.py
server/other_modules/images/: imgbb.py
server/other_modules/tebi/: __init__.py
server/routers/: endpoints.py  statistics.py
server/routers/audios/: audios.py  utils.py
server/routers/audios/schemas/: audios.py
server/routers/authentication/: __init__.py  auth.py  discord_oauth.py  facebook_oauth.py  general_auth.py  google_oauth.py  jwt_auth.py
server/routers/news_admin/: ai.py  draft_posts.py  posts.py
server/routers/other_modules/: __init__.py  shorten_link.py
server/routers/study_tools/: pomodoros.py  taskcategories.py  todolist.py
server/routers/user/: ai.py  audios.py  posts.py  user.py
server/routers/users/: info.py  settings.py
server/routers/v1/ai/: api.py
server/schemas/: common_types.py  user_daily_study_time.py
server/schemas/auth/: auth.py  user.py
server/schemas/news_admin/: __init__.py  ai.py  crawlers.py  draft_posts.py  enums.py  posts.py
server/schemas/user/: __init__.py  ai.py  audios.py  posts.py
server/scrap/: func.py
server/scrap/khoahoc_tv/: khoahoc_tv.py
server/services/: gemini.py
server/services/discord_bot/: conf.py  news.py
server/services/facebook_bot/: conf.py  func.py
server/services/tebi/: __init__.py
server/services/tinify/: __init__.py
server/tests/: conftest.py
server/tests/unit/: test_auth.py
server/users/other_modules/: betterme_cert.py
server/users/study_tools/: __init__.py  pomodoros.py  quotes.py  todolist.py
server/users/users/: __init__.py  settings.py
server/utils/: beanie_odm.py
(+658 files in other folders)
