[tool.poetry]
name = "file_service"
version = "0.1.1"
description = ""
authors = ["Khoi"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.0"
ffmpeg-python = "^0.2.0"
boto3 = "<1.36.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.11.1"
pydantic-settings = "^2.8.1"
pillow = "^11.1.0"
beanie = "^1.29.0"
yt-dlp = "^2025.3.31"
aiohttp = "^3.11.16"
aiofiles = "^24.1.0"
rq = "^1.16.0"
redis = "^5.0.4"

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405"]
"main.py" = ["F403"]
"scripts.py" = ["E711"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
