[project]
name = "server"
version = "0.1.1"
description = ""
authors = [
    { name = "Khoi" }
]
requires-python = "==3.13.2"
dependencies = [
    "fastapi==0.115.5",
    "pydantic[email]>=2.4.2,<3.0.0",
    "uvicorn[standard]>=0.30.1,<0.31.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic-settings>=2.0.3,<3.0.0",
    "discord-py>=2.3.2,<3.0.0",
    "pillow>=10.4.0",
    "facebook-sdk>=3.1.0,<4.0.0",
    "pytz>=2023.3.post1",
    "aiofiles>=23.2.1,<24.0.0",
    "pyjwt<=2.8.0",
    "passlib>=1.7.4,<2.0.0",
    "fastapi-discord<=0.2.7",
    "tinify>=1.6.0,<2.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "orjson>=3.10.3,<4.0.0",
    "requests-oauthlib>=2.0.0,<3.0.0",
    "beanie==2.0.0",
    "pyheck>=0.1.5",
    "boto3>=1.37.28,<2.0.0",
    "cryptography>=44.0.2,<45.0.0",
    "google-generativeai>=0.8.4,<0.9.0",
    "async-cache>=1.1.1,<2.0.0",
    "aiohttp>=3.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2,<8.0.0",
    "httpx>=0.27.0,<0.28.0",
    "pytest-asyncio>=0.23.5,<0.24.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "mongomock-motor==0.0.34",
    "workers-py",
    "workers-runtime-sdk"
]

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405"]
"conftest.py" = ["E402"]
"main.py" = ["F403"]
"enums.py" = ["F403"]
"scripts.py" = ["E711"]

[tool.pytest.ini_options]
addopts = "--disable-warnings"

[tool.coverage.run]
omit = [
    "./scrap/khoahoc_tv/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py", "**/*.py"]
